--- a/index.html
+++ b/index.html
@@ -15,9 +15,15 @@
             <img src="media/img/logo.png" alt="PleniTé Logo" />
             PleniTé
           </a>
-          <button class="mobile-menu-toggle" id="mobileMenuToggle">☰</button>
-          <nav>
-            <ul id="mainNav">
+          <button class="mobile-menu-toggle" id="mobileMenuToggle">
+            <span class="hamburger-icon">
+              <span class="line"></span>
+              <span class="line"></span>
+              <span class="line"></span>
+            </span>
+          </button>
+          <nav id="mainNav">
+            <ul>
               <li><a href="#home">Home</a></li>
               <li><a href="#products">Productos</a></li>
               <li><a href="#contact">Contacto</a></li>
@@ -313,14 +319,6 @@
             <p>Donde cada sorbo es un viaje de aroma y sabor.</p>
           </div>
           <div class="footer-column">
-            <h3>Navegación</h3>
-            <ul>
-              <li><a href="#home">Home</a></li>
-              <li><a href="#products">Productos</a></li>
-              <li><a href="#contact">Contacto</a></li>
-            </ul>
-          </div>
-          <div class="footer-column">
             <h3>Contacto</h3>
             <ul>
               <li>Email: info@plenite.com</li>
@@ -331,111 +329,13 @@
           <div class="footer-column">
             <h3>Síguenos</h3>
             <ul>
-              <li><a href="#">Facebook</a></li>
-              <li><a href="#">Instagram</a></li>
-              <li><a href="#">Twitter</a></li>
+              <li>Facebook</li>
+              <li>Instagram</li>
+              <li>Twitter</li>
             </ul>
           </div>
         </div>
-        <div class="copyright">
-          <p>&copy; 2025 PleniTé. Todos los derechos reservados.</p>
-        </div>
       </div>
     </footer>
-
-    <script>
-      // Mobile menu toggle
-      document
-        .getElementById("mobileMenuToggle")
-        .addEventListener("click", function () {
-          document.getElementById("mainNav").classList.toggle("active");
-        });
-
-      // Form validation
-      document
-        .getElementById("contactForm")
-        .addEventListener("submit", function (e) {
-          e.preventDefault();
-
-          const name = document.getElementById("name").value;
-          const email = document.getElementById("email").value;
-          const message = document.getElementById("message").value;
-
-          let isValid = true;
-
-          if (name.trim() === "") {
-            isValid = false;
-            document.getElementById("name").style.borderColor = "red";
-          } else {
-            document.getElementById("name").style.borderColor = "#ddd";
-          }
-
-          if (email.trim() === "" || !email.includes("@")) {
-            isValid = false;
-            document.getElementById("email").style.borderColor = "red";
-          } else {
-            document.getElementById("email").style.borderColor = "#ddd";
-          }
-
-          if (message.trim() === "") {
-            isValid = false;
-            document.getElementById("message").style.borderColor = "red";
-          } else {
-            document.getElementById("message").style.borderColor = "#ddd";
-          }
-
-          if (isValid) {
-            alert("¡Gracias por tu mensaje! Te responderemos pronto.");
-            this.reset();
-          }
-        });
-
-      // Smooth scrolling for navigation links
-      document.querySelectorAll('a[href^="#"]').forEach((anchor) => {
-        anchor.addEventListener("click", function (e) {
-          e.preventDefault();
-
-          const target = document.querySelector(this.getAttribute("href"));
-          if (target) {
-            window.scrollTo({
-              top: target.offsetTop - 80,
-              behavior: "smooth",
-            });
-          }
-
-          // Close mobile menu if open
-          if (document.getElementById("mainNav").classList.contains("active")) {
-            document.getElementById("mainNav").classList.remove("active");
-          }
-        });
-      });
-
-      // Animation on scroll
-      document.addEventListener("DOMContentLoaded", function () {
-        const fadeElements = document.querySelectorAll(".fade-in");
-
-        const observer = new IntersectionObserver(
-          (entries) => {
-            entries.forEach((entry) => {
-              if (entry.isIntersecting) {
-                entry.target.style.opacity = 1;
-                entry.target.style.transform = "translateY(0)";
-                observer.unobserve(entry.target);
-              }
-            });
-          },
-          {
-            threshold: 0.1,
-          }
-        );
-
-        fadeElements.forEach((element) => {
-          element.style.opacity = 0;
-          element.style.transform = "translateY(20px)";
-          element.style.transition = "opacity 0.5s ease, transform 0.5s ease";
-          observer.observe(element);
-        });
-      });
-    </script>
   </body>
 </html>
